<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="24dp"
    tools:context=".features.auth.AuthFragment">

    <TextView
        android:id="@+id/appNameTextViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="@color/systemColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitleAuth"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameTextViewId" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/authNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:hintTextColor="@color/systemColor"
        app:boxStrokeColor="@color/systemColor"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitleTextView"
        app:startIconDrawable="@drawable/ic_person"
        app:startIconTint="@color/systemColor">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/regNameId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/authNameId"
            android:textColor="@color/black"
            android:inputType="text"
            tools:text="Пользователь" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/authPasswordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:hintTextColor="@color/systemColor"
        app:boxStrokeColor="@color/systemColor"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/systemColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authNameLayout"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/systemColor">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/authPasswordId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/authPasswordId"
            android:textColor="@color/black"
            android:inputType="textPassword"
            tools:text="пароль" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonAuth"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="@color/systemColor"
        app:cornerRadius="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authPasswordLayout" />

    <TextView
        android:id="@+id/regLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="32dp"
        android:padding="8dp"
        android:textColor="@color/systemColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAuth" />

</androidx.constraintlayout.widget.ConstraintLayout>