<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.register.RegisterFragment">

    <TextView
        android:id="@+id/appNameTextViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/app_name"
        android:textSize="34sp"
        android:textColor="@color/systemColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitleReg"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameTextViewId" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        app:hintTextColor="@color/systemColor"
        app:boxStrokeColor="@color/systemColor"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitleTextView"
        app:startIconDrawable="@drawable/ic_person" app:startIconTint="@color/systemColor">
        <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/regNameId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authNameId"
        android:hint="@string/authNameId"
        android:textColor="#000000"
        android:textColorHint="#9E9E9E"
        android:background="@android:color/transparent"
        android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regEmailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeColor="@color/systemColor"
        app:hintTextColor="@color/systemColor"
        app:layout_constraintEnd_toEndOf="@+id/regNameLayout"
        app:layout_constraintStart_toStartOf="@+id/regNameLayout"
        app:layout_constraintTop_toBottomOf="@+id/regNameLayout"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/systemColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/authEmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/subtitleEmail"
            android:text="@string/subtitleEmail"
            android:textColor="#000000"
            android:textColorHint="#9E9E9E" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regPasswordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeColor="@color/systemColor"
        app:hintTextColor="@color/systemColor"
        app:layout_constraintEnd_toEndOf="@+id/regEmailLayout"
        app:layout_constraintStart_toStartOf="@+id/regEmailLayout"
        app:layout_constraintTop_toBottomOf="@+id/regEmailLayout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/systemColor"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/systemColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/authPasswordId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/authPasswordId"
            android:inputType="textPassword"
            android:text="@string/authPasswordId"
            android:textColor="#000000"
            android:textColorHint="#9E9E9E" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonAuth"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/systemColor"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/regPasswordLayout"
        app:layout_constraintTop_toBottomOf="@+id/regPasswordLayout" />

    <TextView
        android:id="@+id/authLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authId"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        android:textColor="@color/systemColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAuth" />

</androidx.constraintlayout.widget.ConstraintLayout>